bug: deployment on github pages

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <!-- render task -->
     </ul>
 
-    <script src="../dist/index.js" type="module"></script>
+    <script src="dist/index.js" type="module"></script>
   </body>
 </html>
