--- a/index.html
+++ b/index.html
@@ -6,32 +6,48 @@
     <title>Todolist APP</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <h1>TodoList APP</h1>
+  <body
+    class="bg-cover bg-no-repeat h-screen bg-[url('https://grainy-gradients.vercel.app/noise.svg')]"
+  >
+    <h1 class="my-4 text-2xl font-semibold text-center text-gray-800">
+      TodoList APP
+    </h1>
 
-    <!-- form -->
-    <form class="form-container">
-      <input type="text" id="taskInput" placeholder="Tambah tugas baru..." />
-      <button id="addTaskBtn">Tambah</button>
+    <form class="flex justify-center max-w-xs mx-auto my-4 space-x-2">
+      <input
+        type="text"
+        id="taskInput"
+        placeholder="Tambah tugas baru..."
+        class="focus:outline-none focus:shadow-outline w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none"
+      />
+      <button
+        id="addTaskBtn"
+        class="hover:bg-gray-900 focus:outline-none focus:shadow-outline px-4 py-2 font-bold text-white bg-gray-800 rounded"
+      >
+        Tambah
+      </button>
     </form>
 
-    <!-- filter -->
-    <div class="filter-container">
-      <label for="filters" style="font-size: large; font-weight: 600; text-align: center;">Filter</label>
-      <select class="option-container" id="filterSelect">
+    <div
+      class="filter-container flex flex-col items-center max-w-xs mx-auto my-4 space-y-2"
+    >
+      <label for="filters" class="text-lg font-semibold">Filter</label>
+      <select class="option-container w-48" id="filterSelect">
         <option value="all">Semua</option>
         <option value="incomplete">Belum selesai</option>
         <option value="complete">Selesai</option>
       </select>
     </div>
 
-    <!-- taskList -->
-    <h2>Daftar Tugas</h2>
+    <h2 class="my-4 mt-10 text-xl font-semibold text-center text-gray-800">
+      Daftar Tugas
+    </h2>
 
-    <ul id="taskList" class="task-container">
-        <!-- render task -->
-    </ul>
+    <ul
+      id="taskList"
+      class="task-container flex flex-col max-w-xl p-0 mx-auto space-y-2 list-none"
+    ></ul>
 
-    <script src="dist/index.js" type="module"></script>
+    <script src="./dist/index.js" type="module"></script>
   </body>
 </html>
